<?xml version="1.0"?>
<package format="2">
  <name>scale_truck_control_gui</name>
  <version>0.0.0</version>
  <description>The scale_truck_control_gui package</description>

  <maintainer email="suneel@todo.todo">suneel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>scale_truck_control_msgs</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
